--- a/src/scss/section/_product.scss
+++ b/src/scss/section/_product.scss
@@ -24,7 +24,7 @@
       white-space: nowrap;
       opacity: 0.85;
       line-height: 10vh;
-      color: #afafaf;
+      color: #808080;
       animation: marquee 10s linear infinite;
     }
     // z-index: 10;
