--- a/src/scss/section/_sns.scss
+++ b/src/scss/section/_sns.scss
@@ -14,7 +14,7 @@
     margin-left: 120px;
     h2 {
       font-size: 3vw;
-      color: #efefef;
+      color: #4e4e4e;
       // padding: 25px 0;
       text-transform: uppercase;
       word-break: keep-all;
