--- a/src/css/comm.css
+++ b/src/css/comm.css
@@ -358,9 +358,30 @@ legend {
   align-items: center;
 }
 #about .about-text h2 {
+  position: relative;
   font-size: 4vw;
   color: #4e4e4e;
   word-break: keep-all;
+  margin-bottom: 30px;
+  padding-left: 30px;
+}
+#about .about-text h2::before {
+  content: "";
+  position: absolute;
+  top: 26px;
+  left: 0;
+  width: 20px;
+  height: 60px;
+  background: #7e7e7e;
+}
+#about hr {
+  display: block;
+  margin-top: 0;
+  margin-bottom: 50px;
+  margin-left: auto;
+  margin-right: auto;
+  border-style: inset;
+  border-width: 1px;
 }
 #about img {
   margin: 50px 5vw 0;
@@ -368,7 +389,7 @@ legend {
 }
 #about .skill-container {
   padding: 50px 40px 30px;
-  background: rgba(240, 240, 240, 0.5);
+  background: rgba(240, 240, 240, 0.767);
   -webkit-backdrop-filter: 5px;
           backdrop-filter: 5px;
   display: flex;
@@ -880,6 +901,72 @@ legend {
   margin: 10px 0;
 }
 
+#contect {
+  height: 100vh;
+}
+#contect h2 {
+  font-size: 4vw;
+  color: #4e4e4e;
+  word-break: keep-all;
+  text-align: center;
+}
+#contect .me {
+  display: block;
+  margin: 2em auto;
+  margin-bottom: 3em;
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  position: relative;
+  z-index: 2;
+  -o-object-fit: cover;
+     object-fit: cover;
+  opacity: 0.9;
+  filter: grayscale(0.2);
+}
+#contect .social {
+  text-align: center;
+  font-size: 2.5em;
+  color: #555;
+  overflow: hidden;
+  color: inherit;
+  text-decoration: none;
+}
+#contect .cosial-icon {
+  margin: 0.3em;
+  cursor: pointer;
+  transition: color 300ms ease, margin-top 300ms ease;
+  transform: translateZ(0);
+}
+#contect .cosial-icon:hover {
+  margin-top: -1px;
+}
+#contect .cosial-icon#twitter:hover {
+  color: #77ddf6;
+}
+#contect .cosial-icon#github {
+  color: #474747;
+}
+#contect .cosial-icon#github:hover {
+  color: black;
+}
+#contect .cosial-icon#instagram:hover {
+  background: linear-gradient(rgb(113, 63, 251) 0%, rgb(194, 31, 145) 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+#contect .cosial-icon#tistory:hover {
+  color: rgb(202, 0, 0);
+}
+#contect .cosial-icon#mail:hover {
+  color: #0126f7;
+}
+
+.copyright {
+  text-align: center;
+  margin-top: 100px;
+}
+
 body {
   font-family: "Century Gothic", "Lato", sans-serif;
 }
@@ -956,9 +1043,13 @@ a {
   }
 }
 #intro h3 {
-  margin: 5px 10vw;
+  margin: 5px 20vw;
   font-size: 1rem;
   letter-spacing: 0.3rem;
   opacity: 0.6;
   margin-top: 5px;
+}
+
+.fp-watermark {
+  display: none;
 }/*# sourceMappingURL=comm.css.map */
