--- a/src/scss/comm.scss
+++ b/src/scss/comm.scss
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 @import "setting/variables", "setting/mixin", "setting/fonts", "setting/reset", "section/about", "section/site",
-  "section/product", "section/sns", "section/banner";
+  "section/product", "section/sns", "section/banner", "section/contect";
 
 body {
   font-family: "Century Gothic", "Lato", sans-serif;
@@ -78,10 +78,13 @@ a {
     }
   }
   h3 {
-    margin: 5px 10vw;
+    margin: 5px 20vw;
     font-size: 1rem;
     letter-spacing: 0.3rem;
     opacity: 0.6;
     margin-top: 5px;
   }
+}
+.fp-watermark {
+  display: none;
 }
