--- a/src/scss/section/_about.scss
+++ b/src/scss/section/_about.scss
@@ -19,12 +19,34 @@
   }
   .about-text {
     // margin: 0 5vw;
+
     h2 {
+      position: relative;
       font-size: 4vw;
       color: #4e4e4e;
       // padding: 25px 0;
       word-break: keep-all;
+      margin-bottom: 30px;
+      padding-left: 30px;
+      &::before {
+        content: "";
+        position: absolute;
+        top: 26px;
+        left: 0;
+        width: 20px;
+        height: 60px;
+        background: #7e7e7e;
+      }
     }
+  }
+  hr {
+    display: block;
+    margin-top: 0;
+    margin-bottom: 50px;
+    margin-left: auto;
+    margin-right: auto;
+    border-style: inset;
+    border-width: 1px;
   }
   img {
     margin: 50px 5vw 0;
@@ -33,7 +55,8 @@
   .skill-container {
     // width: 80%;
     padding: 50px 40px 30px;
-    background: rgb(240, 240, 240, 0.5);
+    background: rgba(240, 240, 240, 0.767);
+    // background: rgba(240, 240, 240, 0.5);
     backdrop-filter: 5px;
     display: flex;
     gap: 58px;
