--- a/src/scss/comm.scss
+++ b/src/scss/comm.scss
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 @import "setting/variables", "setting/mixin", "setting/fonts", "setting/reset", "section/about", "section/site",
-  "section/product", "section/sns", "section/banner", "section/contect";
+  "section/product", "section/sns", "section/banner", "section/contact", "section/motion";
 
 body {
   font-family: "Century Gothic", "Lato", sans-serif;
