--- a/src/scss/section/_product.scss
+++ b/src/scss/section/_product.scss
@@ -8,10 +8,6 @@
   // padding: 0 -2rem -2rem;
   @import url("https://fonts.googleapis.com/css?family=Cardo:700");
 
-  // h1 {
-  //   font-size: 20vw;
-  // }
-
   // infinite text
   .title {
     margin-top: 50px;
@@ -44,6 +40,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
     h2 {
       font-size: 3vw;
       color: #666666;
@@ -51,6 +48,14 @@
       text-transform: uppercase;
       margin-bottom: 30px;
       // color: #757575;
+    }
+    .dar-logo {
+      position: absolute;
+      top: 30px;
+      left: 0;
+      opacity: 0.7;
+      width: 200px;
+      height: auto;
     }
     .gallery-wrap {
       display: flex;
