--- a/src/scss/section/_site.scss
+++ b/src/scss/section/_site.scss
@@ -153,7 +153,7 @@
           display: block;
           font-size: 40px;
           padding: 10px;
-          position: static;
+          position: static !important;
         }
       }
     }
